filtro gaus blur aniadido

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
     <label for="tentacles">Grid</label>
     <input type="number" id="tentacles" name="tentacles" min="10" max="100" value="60">
     <label >px</label>
+    <label for="gblur">Blur</label>
+    <input type="text" id="gblur" name="gblur" min="0" max="10" value="0">
+    <label >px</label>
     <select name="clase" id="clase">
       <option value="-1">Nada   -1</option>
       <option value="0">Humo     0</option>
@@ -64,6 +67,7 @@
     <canvas class="canvas2" ></canvas>
     <p class="features"></p>
     <canvas class="canvas3 hidden" ></canvas>
+    <canvas class="canvas4 hidden" ></canvas>
     <button class="btn-63"><span>Descargar CSV</span></button>
   </div>
 
