--- a/featureExt.html
+++ b/featureExt.html
@@ -89,15 +89,18 @@
     <label for="tentacles">Grid</label>
     <input type="number" id="tentacles" name="tentacles" min="10" max="100" value="30">
     <label >px</label>
+    <br>
     <label for="gblur">Blur</label>
     <input type="number" id="gblur" name="gblur" min="0" max="10" >
     <label >px</label>
     <h4>co ocurrence matrix</h4>
     <label for="distane">distanc</label>
     <input type="number" id="distance" name="distance" max="10" value="3">
+    <br>
     <label for="angulo">angulo</label>
     <input type="number" id="angulo" name="angulo" value="90">
     <h4>clase</h4>
+    <label>ㅤ</label>
     <select name="clase" id="clase">
       <option value="-1">Nada   -1</option>
       <option value="0">Humo     0</option>
