--- a/network.html
+++ b/network.html
@@ -1,111 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>ImgeFeature</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
-
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-
-  <!-- Google Fonts -->
-
-  <!-- Template Main CSS File -->
-  <link href="css/backgroud.css" rel="stylesheet">
-  <link href="css/main.css" rel="stylesheet">
-  <link href="css/buttoms.css" rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
-  <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
-
-
-
-</head>
-
-<body>
-
-<!-- ======= Header ======= -->
-  <header id="header" class="header fixed-top">
-    <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
-
-      <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/img/logo.png" alt="">
-        <span>DataMining</span>
-      </a>
-
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a class="nav-link scrollto active" href="index.html">Process</a></li>
-          <li><a class="nav-link scrollto" href="featureExt.html">Feature Extractor</a></li>
-          <li><a class="nav-link scrollto" href="code.html">Code</a></li>
-          <li><a class="getstarted scrollto" href="network.html">Trained network</a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-
-    </div>
-  </header><!-- End Header -->
-
-
-
-<div class="white">
-  <div class="squares">
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
-  </div>
-  <div class="container-inline">
-    <div class="drag-area">
-      <h2>Arrastra y suelta tu imagen aquí</h2>
-      <span>o</span>
-      <button>Selecciona tu imagene</button>
-      <input type="file" hidden multiple/>
-    </div>
-    <canvas class="canvas hidden" ></canvas>
-    <button class="button-shrink hidden">✖️</button>
-  </div>
-
-
-</div>
-
-        
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="container">
-      <div class="copyright">
-        &copy; <strong><span>DominusDrow</span></strong>. All Rights Reserved
+  <head>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>ImgeFeature</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
+  
+    <!-- Favicons -->
+    <link href="assets/img/favicon.png" rel="icon">
+  
+    <!-- Google Fonts -->
+  
+    <!-- Template Main CSS File -->
+    <link href="css/backgroud.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <link href="css/buttoms.css" rel="stylesheet">
+  
+    <!-- Vendor CSS Files -->
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  
+    <!-- Template Main CSS File -->
+    <link href="assets/css/style.css" rel="stylesheet">
+  
+  
+  
+  </head>
+  
+  <body>
+  
+  <!-- ======= Header ======= -->
+    <header id="header" class="header fixed-top">
+      <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
+  
+        <a href="index.html" class="logo d-flex align-items-center">
+          <img src="assets/img/logo.png" alt="">
+          <span>DataMining</span>
+        </a>
+  
+        <nav id="navbar" class="navbar">
+          <ul>
+            <li><a class="nav-link scrollto active" href="index.html">Process</a></li>
+            <li><a class="nav-link scrollto" href="featureExt.html">Feature Extractor</a></li>
+            <li><a class="nav-link scrollto" href="code.html">Code</a></li>
+            <li><a class="getstarted scrollto" href="network.html">Trained network</a></li>
+          </ul>
+          <i class="bi bi-list mobile-nav-toggle"></i>
+        </nav><!-- .navbar -->
+  
       </div>
-      <div class="credits">
-        Create by <a href="https://github.com/DominusDrow">DominusDrow</a>
-      </div>
+    </header><!-- End Header -->
+  
+  
+  
+  <div class="white">
+    <div class="squares">
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
     </div>
-  </footer><!-- End #footer -->
-
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-  <!-- Librarys JS File -->
-  <script src="//cdn.jsdelivr.net/npm/jstat@latest/dist/jstat.min.js" ></script>
-
-  <!-- Main JS File -->
-  <script src="js/app.js" type="module"></script>
-
-</body>
+    <div class="container-inline">
+      <div class="drag-area" style="left:27%">
+        <h2>Arrastra y suelta tu imagen aquí</h2>
+        <span>o</span>
+        <button>Selecciona tu imagene</button>
+        <input type="file" hidden multiple/>
+      </div>
+      <canvas class="canvas hidden" ></canvas>
+      <button class="button-shrink hidden">✖️</button>
+    </div>
+    </div>
+  
+  </div>
+  
+          
+    <!-- ======= Footer ======= -->
+    <footer id="footer">
+      <div class="container">
+        <div class="copyright">
+          &copy; <strong><span>DominusDrow</span></strong>. All Rights Reserved
+        </div>
+        <div class="credits">
+          Create by <a href="https://github.com/DominusDrow">DominusDrow</a>
+        </div>
+      </div>
+    </footer><!-- End #footer -->
+  
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  
+    <!-- Librarys JS File -->
+    <script src="//cdn.jsdelivr.net/npm/jstat@latest/dist/jstat.min.js" ></script>
+  
+    <!-- Main JS File -->
+    <script src="js/app2.js" type="module"></script>
+  
+  </body>
 
 </html>
