--- a/code.html
+++ b/code.html
@@ -24,7 +24,6 @@
 <link href="assets/css/style.css" rel="stylesheet">
 
 
-
 <style type="text/css">
     pre { line-height: 125%; }
 td.linenos .normal { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
@@ -14590,7 +14589,6 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
     <!-- End of mathjax configuration --></head>
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
 
-
 <!-- ======= Header ======= -->
 <header id="header" class="header fixed-top" style="position: relative">
   <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
@@ -14612,8 +14610,6 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 
   </div>
 </header><!-- End Header -->
-
-
 
 
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
@@ -14651,7 +14647,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 </div>
 </div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
@@ -14666,55 +14662,6 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
      </div>
 </div>
 </div>
-</div>
-
-<div class="jp-Cell-outputWrapper">
-<div class="jp-Collapser jp-OutputCollapser jp-Cell-outputCollapser">
-</div>
-
-
-<div class="jp-OutputArea jp-Cell-outputArea">
-
-<div class="jp-OutputArea-child">
-
-    
-    <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
-
-
-<div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain">
-<pre>Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/
-Collecting python-javabridge
-  Downloading python-javabridge-4.0.3.tar.gz (1.3 MB)
-     |████████████████████████████████| 1.3 MB 5.0 MB/s 
-Requirement already satisfied: numpy&gt;=1.20.1 in /usr/local/lib/python3.7/dist-packages (from python-javabridge) (1.21.6)
-Building wheels for collected packages: python-javabridge
-  Building wheel for python-javabridge (setup.py) ... done
-  Created wheel for python-javabridge: filename=python_javabridge-4.0.3-cp37-cp37m-linux_x86_64.whl size=1628174 sha256=fae5849d99c687453d52d642a49c0afca9c0fc95835e863cd9a575e4c27dc6e6
-  Stored in directory: /root/.cache/pip/wheels/63/7e/91/01b1bd8d29b4323834feb5cfec49b857fb212e6efc74ce103c
-Successfully built python-javabridge
-Installing collected packages: python-javabridge
-Successfully installed python-javabridge-4.0.3
-Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/
-Collecting python-weka-wrapper3
-  Downloading python-weka-wrapper3-0.2.11.tar.gz (14.4 MB)
-     |████████████████████████████████| 14.4 MB 4.9 MB/s 
-Requirement already satisfied: python-javabridge&gt;=4.0.0 in /usr/local/lib/python3.7/dist-packages (from python-weka-wrapper3) (4.0.3)
-Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from python-weka-wrapper3) (1.21.6)
-Requirement already satisfied: packaging in /usr/local/lib/python3.7/dist-packages (from python-weka-wrapper3) (21.3)
-Requirement already satisfied: pyparsing!=3.0.5,&gt;=2.0.2 in /usr/local/lib/python3.7/dist-packages (from packaging-&gt;python-weka-wrapper3) (3.0.9)
-Building wheels for collected packages: python-weka-wrapper3
-  Building wheel for python-weka-wrapper3 (setup.py) ... done
-  Created wheel for python-weka-wrapper3: filename=python_weka_wrapper3-0.2.11-py3-none-any.whl size=12998013 sha256=9792731e4196697199f25075a6eb4534fd54c2f7625f7b96cf0ada7ec26a4e8a
-  Stored in directory: /root/.cache/pip/wheels/b3/fb/c0/dc24933e218b1211ba6bc817e00204f1977a8c83502d042f90
-Successfully built python-weka-wrapper3
-Installing collected packages: python-weka-wrapper3
-Successfully installed python-weka-wrapper3-0.2.11
-</pre>
-</div>
-</div>
-
-</div>
-
 </div>
 
 </div>
@@ -14761,7 +14708,7 @@ Successfully installed python-weka-wrapper3-0.2.11
 </div>
 </div>
 </div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
@@ -14775,32 +14722,6 @@ Successfully installed python-weka-wrapper3-0.2.11
      </div>
 </div>
 </div>
-</div>
-
-<div class="jp-Cell-outputWrapper">
-<div class="jp-Collapser jp-OutputCollapser jp-Cell-outputCollapser">
-</div>
-
-
-<div class="jp-OutputArea jp-Cell-outputArea">
-
-<div class="jp-OutputArea-child">
-
-    
-    <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
-
-
-<div class="jp-RenderedText jp-OutputArea-output" data-mime-type="application/vnd.jupyter.stderr">
-<pre>DEBUG:weka.core.jvm:Adding bundled jars
-DEBUG:weka.core.jvm:Classpath=[&#39;/usr/local/lib/python3.7/dist-packages/javabridge/jars/rhino-1.7R4.jar&#39;, &#39;/usr/local/lib/python3.7/dist-packages/javabridge/jars/runnablequeue.jar&#39;, &#39;/usr/local/lib/python3.7/dist-packages/javabridge/jars/cpython.jar&#39;, &#39;/usr/local/lib/python3.7/dist-packages/weka/lib/weka.jar&#39;, &#39;/usr/local/lib/python3.7/dist-packages/weka/lib/python-weka-wrapper.jar&#39;]
-DEBUG:weka.core.jvm:MaxHeapSize=default
-DEBUG:weka.core.jvm:Package support enabled
-</pre>
-</div>
-</div>
-
-</div>
-
 </div>
 
 </div>
@@ -14910,7 +14831,7 @@ Se utiliza el "MultilayerPerceptron" de weka para este fin.</p>
 <div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">formatNeuLay</span><span class="p">(</span><span class="n">layers</span><span class="p">,</span> <span class="n">neurons</span><span class="p">):</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">formatNeuLay</span><span class="p">(</span><span class="n">layers</span><span class="p">,</span> <span class="n">neurons</span><span class="p">):</span> <span class="c1">#12,12,12</span>
   
   <span class="n">param</span> <span class="o">=</span> <span class="nb">str</span><span class="p">(</span><span class="n">neurons</span><span class="p">)</span>
   <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span> <span class="p">(</span><span class="mi">0</span><span class="p">,</span><span class="n">layers</span><span class="o">-</span><span class="mi">1</span><span class="p">):</span>
