--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 Se abarca de manera generar todas las etapas que se siguieron para llegar al resultado final, sin embargo, si se quiere indagar de forma exaustiva sobre la justificaicón del proyecto, las tecnicas usadas o los problemas resueltos recomendamos leer el documento tecnico.
               </p>
               <div class="text-center text-lg-start">
-                <a href="https://drive.google.com/file/d/1uio2Ti2cYiDGfihpmapAfsZRJveDPq7L/view" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center" target="_blank">
+                <a href="https://drive.google.com/file/d/14FN-4Z7tCQ41fajbw2TsRDzV8Y8LgAOo/view?usp=sharing" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center" target="_blank">
                   <span>Documento tecnico</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
