add loader at network.html

--- a/network.html
+++ b/network.html
@@ -80,8 +80,14 @@
       </div>
       <canvas class="canvas hidden" ></canvas>
       <button class="button-shrink hidden">✖️</button>
+
+      <div class="loader hidden">
+        <img src="./assets/img/tail-spin.svg" alt="loader">
+      </div>
+
     </div>
-    </div>
+
+  </div>
   
   </div>
   
